k8s/identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aruba-identity
  labels:
    app: aruba-identity
spec:
  type: ClusterIP
  selector:
    app: aruba-identity
  ports:
    - name: http
      port: 8080
      targetPort: 8080
