k8s/identity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aruba-identity-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.aruba.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: aruba-identity
                port:
                  number: 8080

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: aruba-identity
                port:
                  number: 8080
